Minor tweaks based on the ChiliProject 3.0.0 CSS

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -9,7 +9,7 @@
 #top-menu { height: 140px; }
 #logo {height: 95px; margin-top: 30px; margin-bottom: 15px; margin-left: 20px; }
 #breadcrumb {margin-top: 97px; } /* #header + #logo */
-#main { top: 38px; }
+#main { top: 38px; background: #FFFFFF; }
 #footer { position: relative; top: 28px; padding-left: 0px; }
 #main-menu { background: white; margin-top: 0;}
 
@@ -46,6 +46,9 @@ hr { margin: 10px 0px; } /* Reset extra wide hr */
 #main-menu ul { border-top: none; border-bottom: none; }
 #main-menu li { background: #FFFFFF; border-top: none; border-bottom: none; }
 
+#sidebar h3 { margin-top: 5px; }
 
+/* Main content */
+#content { border-right-style: none; } /* Remove right border */
 #content div.issue { border: 3px solid #009DDC; border-radius: 10px; -moz-border-radius: 10px; -webkit-border-radius: 10px; margin-top: 25px; }
 
